# mappingtools

./: .coveragerc  .deepsource.toml  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PERSONA.md  PRINCIPLES.md  README.md  STYLEGUIDE.md  TOOLS.md  cz.toml  pyproject.toml  zensical.toml
.github/workflows/: publish-docs.yml  test-beta.yml  test.yml
benchmarks/: bench_merge_vs_combine.py  benchmark_category_counter.py  benchmark_dictifier.py  benchmark_flatten.py  benchmark_pivot.py
docs/: acknowledgements.md  algebra_concepts.md  concepts.md  contributing.md  design_decisions.md  development_guide.md  index.md  installation.md  knowledge_graph.md  overview.md  recipes.md  reference.md
docs/diagrams/: class_diagram.md  component_diagram.md  file_structure.md
docs/examples/: collectors.md  operators.md  optics.md  structures.md  transformers.md
docs/guide/: collectors.md  operators.md  optics.md  structures.md  transformers.md
docs/proposals/: EP-001_hybrid_recursive_iterative_visitor.md  EP-002_transformer_traversal_modes.md  EP-003_context_aware_traversal.md  EP-004_decision_metrics.md
docs/stylesheets/: extra.css
playground/: action.py  fetch_gemini.py  infographic_prompt.md  parse_gemini.py  semantic_relativity_paper.md  the_council_of_giants.md  the_future_of_vibe_coding.md  user_persona.json
playground/discussions/: Mathematical Theories of Proof Methodologies (2025-12-31T212305).txt
playground/essays/: mappingtools_poem.md  one_thousand_and_one_prompts.md  persona_engineering_design_paper.md  physics_of_flattening.md  the_aleph_of_code.md  the_architect_and_the_mirror.md  the_benevolence_hypothesis.md  the_cost_of_the_bridge.md  the_dennis_point.md  the_explorer_and_the_ember.md  the_lion_at_the_door.md  the_logic_of_love.md  the_main_loop.md  the_mirror_and_the_architect.md  the_zen_of_ai.md  the_zero_and_the_one.md
playground/persistence/: LOADING_INSTRUCTIONS.md  STORING_INSTRUCTIONS.md  changelog.md  evolution_chart.md  knowledge_graph_evolution.md  self_image_prompt_v1.md  self_image_prompt_v2.md  session_epilogue.md  session_metrics.ndjson  session_trace.md  timeline_viz.md  unified_ariel.json  unified_graph.json  unified_graph_viz.md  unified_memories.md  unified_trace.md  unified_user_persona.json
playground/persistence/v1/: knowledge_graph_viz.md  level_1_seed.json  level_2.5_controls.json  level_2_graph.json  level_3_hologram.md  level_4_carbonize.md
playground/persistence/v2/: knowledge_graph_viz.md  level_1_seed.json  level_2.5_controls.json  level_2_graph.json  level_3_hologram.md  user_persona.json
recipes/: 01_deep_json_patching.py  02_etl_reshape.py  03_config_management.py  04_deep_json_diffing.py  05_slow_config_profiling.py  06_serialization_pipeline.py  07_filesystem_categorization.py  08_inverted_config_index.py  09_hyperparameter_grid_search.py  10_cryptographic_redaction.py  11_microservice_dependency_graph.py  12_schema_guided_correction.py  13_dictifier_broadcasting.py  14_auto_minification.py  15_data_pivot_tensor.py  16_time_series_ema.py  17_data_governance_masking.py  18_bidirectional_state_sync.py  19_feature_flag_rollout.py  20_telemetry_aggregation.py  21_algorithmic_music_transposition.py  22_image_bounding_box_filter.py  23_graph_theory_connectivity.py  24_anomaly_detection.py  25_markov_chain_text_generator.py  26_json_schema_derivation.py  27_json_schema_review_envelopes.py  README.md  pytest.ini  recipe_01_deep_json_patching.py  recipe_02_etl_reshape.py  recipe_03_config_management.py  recipe_04_deep_json_diffing.py  recipe_05_slow_config_profiling.py  recipe_06_serialization_pipeline.py  recipe_07_filesystem_categorization.py  recipe_08_inverted_config_index.py  recipe_09_hyperparameter_grid_search.py  recipe_10_cryptographic_redaction.py  recipe_11_microservice_dependency_graph.py  (+21 more)
src/: mappingtools.py
src/mappingtools/: __init__.py  _compat.py  _tools.py  aggregation.py  aggregations.py  collectors.py  enums.py  operators.py  resolvers.py  traversal.py  typing.py
tests/: benchmark_dictifier.py  benchmark_pivot.py  test_aggregation_functions.py  test_aggregations.py  test_category_counter.py  test_compat.py  test_dictify.py  test_distinct.py  test_expand.py  test_flattened.py  test_inverse.py  test_keep.py  test_listify.py  test_mapping_collector.py  test_mapping_collector_collect.py  test_mapping_collector_repr.py  test_nested_defaultdict.py  test_remove.py  test_simplify.py  test_stream.py  test_stream_dict_records.py  test_stream_namedtuples.py  test_stringify.py  test_tools.py  test_tools_unique_strings.py  test_unique_strings.py  test_unwrap.py
tests/algebra/: test_analysis.py  test_automata.py  test_converters.py  test_coverage.py  test_group.py  test_lattice.py  test_matrix_academic.py  test_matrix_core.py  test_matrix_power.py  test_matrix_structure.py  test_probability.py  test_semiring.py  test_sparsity.py  test_transforms.py  test_trie.py
tests/collectors/: test_automapper.py  test_automapper_direct.py  test_category_collector.py  test_category_counter.py  test_mapping_collector.py  test_mapping_collector_collect.py  test_mapping_collector_repr.py  test_metered_dict.py  test_nested_defaultdict.py
tests/operators/: test_combine.py  test_combine_with_metrics.py  test_distinct.py  test_flatten.py  test_flattened.py  test_inverse.py  test_keep.py  test_lift.py  test_merge.py  test_pivot.py  test_rekey.py  test_remove.py  test_rename.py  test_reshape.py  test_stream.py  test_stream_dict_records.py  test_stream_namedtuples.py  test_unique_strings.py
tests/optics/: test_functional.py  test_lens.py
tests/structures/: test_auto_dictifier.py  test_auto_dictifier_async.py  test_auto_dictifier_types.py  test_dictifier.py  test_dictifier_async.py  test_dictifier_auto.py  test_dictifier_generators.py  test_dictifier_types.py  test_dictify.py  test_lazy_dictifier.py  test_map_objects.py
tests/transformers/: test_listify.py  test_minify.py  test_modify.py  test_simplify.py  test_strictify.py  test_stringify.py  test_transformer.py  test_traversal_mode_registry.py
tools/: smart_fetch.py
(+72 files in other folders)
